track outgoing links

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         })("woopra");
 
         woopra.config({
-            domain: 'pnagy.github.io'
+            domain: 'pnagy.github.io',
+            outgoing_tracking: true,
+            
         });
         woopra.track();
     </script>
