--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
             var t,i,e,n=window,o=document,a=arguments,s="script",r=["config","track","identify","visit","push","call","trackForm","trackClick"],c=function(){var t,i=this;for(i._e=[],t=0;r.length>t;t++)(function(t){i[t]=function(){return i._e.push([t].concat(Array.prototype.slice.call(arguments,0))),i}})(r[t])};for(n._w=n._w||{},t=0;a.length>t;t++)n._w[a[t]]=n[a[t]]=n[a[t]]||new c;i=o.createElement(s),i.async=1,i.src="//static.woopra.com/js/w.js",e=o.getElementsByTagName(s)[0],e.parentNode.insertBefore(i,e)
         })("woopra");
 
-        woopra.config({
-            domain: 'pnagy.github.io',
-            outgoing_tracking: true,
-            
-        });
-        woopra.track();
+        if (window.location.hostname === "pnagy.github.io") {
+            woopra.config({
+                domain: 'pnagy.github.io',
+                outgoing_tracking: true,
+            });
+            woopra.track();
+        }
     </script>
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -30,9 +31,10 @@
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-        ga('create', 'UA-73265736-1', 'auto');
-        ga('send', 'pageview');
-
+        if (window.location.hostname === "pnagy.github.io") {
+            ga('create', 'UA-73265736-1', 'auto');
+            ga('send', 'pageview');
+        }
     </script>
     <!-- End of Woopra Code -->
 </head>
