--- a/index.html
+++ b/index.html
@@ -234,6 +234,28 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="story-text-0 schools"> my schools were </div>
+            </div>
+            <div class="col-lg-8 jobs">
+                <div class="job-section">
+                    <div class="job-header">
+                        <div> 2009 - 2012 </div>
+                        <div><span class="job-title">Computer Science Bsc.</span>, <span class="job-place">University of Szeged</span></div>
+                    </div>
+                </div>
+                <div class="job-section">
+                    <div class="job-header">
+                        <div> 2006 - 2009 </div>
+                        <span class="job-title">Mathematics Bsc.</span>, <span class="job-place">University of Szeged</span>
+                    </div>
+                    <div class="job-description">
+                        Unfinished. I am only missing the final exam.
+                    </div>
+                </div>
+            </div>
+        </div>
     </div> <!-- container -->
 </body>
 </html>
