--- a/index.html
+++ b/index.html
@@ -256,37 +256,27 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-4 story-text-0 language">
+                I can speak
+            </div>
+            <div class="col-md-8">
+                <div class="languages">
+                    <div class="language-name">hungarian</div>
+                    <div class="language-bar">
+                        <div class="full">&nbsp;</div><div class="full">&nbsp;</div><div class="full">&nbsp;</div><div class="full">natively</div>
+                    </div>
+                    <div class="language-name">english</div>
+                    <div class="language-bar">
+                        <div class="full">&nbsp;</div><div class="full">&nbsp;</div><div class="full">fluently</div><div>&nbsp;</div>
+                    </div>
+                    <div class="language-name">french</div>
+                    <div class="language-bar">
+                        <div class="full">basicly</div><div>&nbsp;</div><div>&nbsp;</div><div>&nbsp;</div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div> <!-- container -->
 </body>
 </html>
-
-    <!--<section id="education" class="section education-section">-->
-        <!--<div class="container">-->
-            <!--<h2>Education</h2>-->
-            <!--<div class="row">-->
-                <!--<div class="col-lg-4">-->
-                    <!--2006 – 2009-->
-                <!--</div>-->
-                <!--<div class="col-lg-8">-->
-                    <!--<div class="job-title">-->
-                        <!--<strong>Mathematics Bsc.</strong>, <em>University of Szeged</em>-->
-                        <!--<div class="job-description">-->
-                            <!--Unfinished. I am only missing the final exam.-->
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div class="row">-->
-                <!--<div class="col-lg-4">-->
-                    <!--2009 – 2012-->
-                <!--</div>-->
-                <!--<div class="col-lg-8">-->
-                    <!--<div class="job-title">-->
-                        <!--<strong>Computer Science Bsc.</strong>, <em>University of Szeged</em>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</section>-->
-<!--</body>-->
-<!--</html>-->
