fix mobile view

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <div class="story-text-1">
+                <div class="story-text-1 hidden-xs hidden-sm">
                     I'm
                 </div>
             </div>
@@ -70,9 +70,9 @@
                     Peter Nagy
                 </div>
             </div>
-        </div>
+        </div> <!-- Peter Nagy --->
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4  hidden-xs hidden-sm">
                 <div class="story-text-2">
                     a
                 </div>
@@ -82,9 +82,9 @@
                     Software engineer
                 </div>
             </div>
-        </div>
+        </div> <!-- SoftEng --->
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4  hidden-xs hidden-sm">
                 <div class="story-text-2">
                     from
                 </div>
@@ -94,9 +94,9 @@
                     Szeged, Hungary
                 </div>
             </div>
-        </div>
+        </div> <!-- Szeged --->
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 hidden-xs hidden-sm">
                 <div class="learn-about-me">
                     learn about me
                 </div>
@@ -106,7 +106,7 @@
                     <img src="static/profile_pic.jpg" class="img-responsive">
                 </div>
             </div>
-        </div>
+        </div> <!-- LearnAboutMe --->
         <div class="row">
             <div class="col-md-4">
                 <div class="story-text-2 need-to-know">
@@ -129,7 +129,7 @@
                         case.</p>
                 </div>
             </div>
-        </div>
+        </div> <!-- Intro --->
         <div class="row">
             <div class="col-md-4">
                 <div class="story-text-0 contact-me">
@@ -161,12 +161,16 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> <!-- Contacts --->
         <div class="row">
             <div class="col-md-4">
                 <div class="story-text-0">
                     my skills
                 </div>
+            </div>
+        </div> <!-- my skills --->
+        <div class="row">
+            <div class="col-md-4">
                 <div class="skill-level-3-title">I'm a master of</div>
             </div>
             <div class="col-md-8">
@@ -193,7 +197,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> <!-- Level3 --->
         <div class="row">
             <div class="col-md-4">
                 <div class="skill-level-2-title">I have some experience with</div>
@@ -212,7 +216,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> <!-- Level2 --->
         <div class="row">
             <div class="col-md-4">
                 <div class="skill-level-1-title">I have also worked with</div>
@@ -231,7 +235,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> <!-- Level1 --->
         <div class="row">
             <div class="col-lg-4">
                 <div class="story-text-0 worked-at"> I worked at</div>
@@ -279,7 +283,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> <!-- Work --->
         <div class="row">
             <div class="col-lg-4">
                 <div class="story-text-0 schools"> my schools were</div>
@@ -302,7 +306,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> <!-- School --->
         <div class="row">
             <div class="col-md-4 story-text-0 language">
                 I can speak
@@ -332,7 +336,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> <!-- Lang --->
     </div> <!-- container -->
 </body>
 </html>
