adding free time activities

--- a/index.html
+++ b/index.html
@@ -337,6 +337,33 @@
                 </div>
             </div>
         </div> <!-- Lang --->
+        <div class="row">
+            <div class="col-md-4  story-text-0">
+                im my free time
+            </div>
+            <div class="col-md-4">
+                <div class="activities">
+                    <div class="activity">
+                        <div class="activity-icon gym-icon">&nbsp;</div><div class="activity-name">Powerlifting</div>
+                    </div>
+                    <div class="activity">
+                        <div class="activity-icon crossfit-icon">&nbsp;</div><div class="activity-name">Crossfit</div>
+                    </div>
+                    <div class="activity">
+                        <div class="activity-icon coffee-icon">&nbsp;</div><div class="activity-name">Coffee</div>
+                    </div>
+                    <div class="activity">
+                        <div class="activity-icon nature-icon">&nbsp;</div><div class="activity-name">Nature</div>
+                    </div>
+                    <div class="activity">
+                        <div class="activity-icon food-icon">&nbsp;</div><div class="activity-name">Food</div>
+                    </div>
+                    <div class="activity">
+                        <div class="activity-icon beer-icon">&nbsp;</div><div class="activity-name">Beer</div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div> <!-- container -->
 </body>
 </html>
