make contact icons black

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                         <div class="activity-icon food-icon">&nbsp;</div><div class="activity-name">Food</div>
                     </div>
                     <div class="activity">
-                        <div class="activity-icon beer-icon">&nbsp;</div><div class="activity-name">Beer</div>
+                        <div class="activity-icon beer-icon"></div><div class="activity-name">Beer</div>
                     </div>
                 </div>
             </div>
