fixing some typos and grammar things

--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
                         we always have to find the best available tools to solve our current problems. So I don't stick to
                         any programming language or technology. Any of them can be learnt and has its place.</p>
 
-                    <p>However my favorite playground is frontend developing. I like seeing the results of my work
+                    <p>My favorite playground is frontend developing however I don't scare of backend programming at all. I like seeing the results of my work
                         immediately and working hereby with quick iterations. I enjoy discovering the newest packages, the
                         coolest plugins or widgets.</p>
 
-                    <p>I am also considering myself a very social person. I like peer-programming and working close with
+                    <p>I also consider myself a very social person. I like peer-programming and working in team with
                         others. I'm a great team player I can help others but am able to work independently if that's the
                         case.</p>
                 </div>
@@ -251,7 +251,7 @@
                         I was a member of an internal "startup" called VirtDB. VirtDB is a data virtualization solution. We
                         implemented our solution as a micro-service architecture with many components. These components were
                         written in C++ and NodeJs. My primary responsibility was the implementation of the GUI where the
-                        backend was made using NodeJs with Express and the frontend used AngularJS and React. I also took
+                        backend was made by using NodeJs with Express and the frontend used AngularJS and React. I also took
                         part in the development of other NodeJs components.
                     </div>
                 </div>
@@ -279,7 +279,7 @@
                     </div>
                     <div class="job-description">
                         I was a Drupal developer at the Software Engineering Department of University of Szeged. I used PHP,
-                        Javascript/JQuery and all of other basic web technologies.
+                        Javascript/JQuery and numerous basic web technologies.
                     </div>
                 </div>
             </div>
@@ -339,7 +339,7 @@
         </div> <!-- Lang --->
         <div class="row">
             <div class="col-md-4  story-text-0">
-                im my free time
+                in my free time
             </div>
             <div class="col-md-4">
                 <div class="activities">
