fix some glitches

--- a/index.html
+++ b/index.html
@@ -237,10 +237,10 @@
             </div>
         </div> <!-- Level1 --->
         <div class="row">
-            <div class="col-lg-4">
+            <div class="col-md-4">
                 <div class="story-text-0 worked-at"> I worked at</div>
             </div>
-            <div class="col-lg-8 jobs">
+            <div class="col-md-8 jobs">
                 <div class="job">
                     <div class="job-header">
                         <div> Aug. 2014 - Feb. 2016</div>
@@ -285,10 +285,10 @@
             </div>
         </div> <!-- Work --->
         <div class="row">
-            <div class="col-lg-4">
+            <div class="col-md-4">
                 <div class="story-text-0 schools"> my schools were</div>
             </div>
-            <div class="col-lg-8 jobs">
+            <div class="col-md-8 jobs">
                 <div class="job">
                     <div class="job-header">
                         <div> 2009 - 2012</div>
@@ -359,7 +359,7 @@
                         <div class="activity-icon food-icon">&nbsp;</div><div class="activity-name">Food</div>
                     </div>
                     <div class="activity">
-                        <div class="activity-icon beer-icon"></div><div class="activity-name">Beer</div>
+                        <div class="activity-icon beer-icon">&nbsp;</div><div class="activity-name">Beer</div>
                     </div>
                 </div>
             </div>
