fixing grammar things

--- a/index.html
+++ b/index.html
@@ -115,17 +115,17 @@
             </div>
             <div class="col-md-8">
                 <div class="intro">
-                    <p>I am an almost 28 years old software engineer who passionately likes writing code, solving problems
+                    <p>I am an almost 28 years-old software engineer who is passionate about writing code, solving problems
                         and connecting things. I like trying out new tools and technologies following the trends. I believe
-                        we always have to find the best available tools to solve our current problems. So I don't stick to
+                        we always have to find the best tools available to solve our current problems. So I do not stick to
                         any programming language or technology. Any of them can be learnt and has its place.</p>
 
-                    <p>My favorite playground is frontend developing however I don't scare of backend programming at all. I like seeing the results of my work
+                    <p>My favorite playground is frontend developing however I am not afraid of backend programming at all. I like seeing the results of my work
                         immediately and working hereby with quick iterations. I enjoy discovering the newest packages, the
                         coolest plugins or widgets.</p>
 
                     <p>I also consider myself a very social person. I like peer-programming and working in team with
-                        others. I'm a great team player I can help others but am able to work independently if that's the
+                        others. I'm a great team player, I can help others but I am also able to work independently if that is the
                         case.</p>
                 </div>
             </div>
@@ -267,7 +267,7 @@
                             <li>Creating HTML5 libraries and applications using pure javascript and GWT.</li>
                             <li>Creating internal continous deployment tool using C#/.NET</li>
                             <li>Developing cross-browser/cross-platform video conferencing tool using WebRTC in javascript,
-                                Qt/C++, python. During this project we made IOS and Android applications too.
+                                Qt/C++, python. During this project we developed IOS and Android applications too.
                             </li>
                         </ul>
                     </div>
