fixing grammar things; add presentations

--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
             <div class="col-md-8">
                 <div class="intro">
                     <p>I am an almost 28 years-old software engineer who is passionate about writing code, solving problems
-                        and connecting things. I like trying out new tools and technologies following the trends. I believe
-                        we always have to find the best tools available to solve our current problems. So I do not stick to
-                        any programming language or technology. Any of them can be learnt and has its place.</p>
+                        and connecting things. I like trying out new tools and technologies and being up-to-date with the latest trends. I believe
+                        we always have to find the best tools available for our current problems. So I do not stick to
+                        any programming language or technology. All of them can be learnt and has its place.</p>
 
-                    <p>My favorite playground is frontend developing however I am not afraid of backend programming at all. I like seeing the results of my work
-                        immediately and working hereby with quick iterations. I enjoy discovering the newest packages, the
+                    <p>My favorite playground is frontend developing however I am not afraid of doing backend at all. I like seeing the results of my work
+                        immediately and working with quick iterations. I enjoy discovering the newest packages, the
                         coolest plugins or widgets.</p>
 
                     <p>I also consider myself a very social person. I like peer-programming and working in team with
@@ -249,10 +249,10 @@
                     </div>
                     <div class="job-description">
                         I was a member of an internal "startup" called VirtDB. VirtDB is a data virtualization solution. We
-                        implemented our solution as a micro-service architecture with many components. These components were
-                        written in C++ and NodeJs. My primary responsibility was the implementation of the GUI where the
-                        backend was made by using NodeJs with Express and the frontend used AngularJS and React. I also took
-                        part in the development of other NodeJs components.
+                        implemented our solution with a micro-service architecture with many components. These components were
+                        written in C++ and Node.js. My primary responsibility was the implementation of the GUI where the
+                        backend was made by using Node.js with Express and the frontend used AngularJS and React. I also took
+                        part in the development of other Node.js components.
                     </div>
                 </div>
                 <div class="job">
@@ -261,10 +261,9 @@
                         <span class="job-title">Software engineer</span>, <span class="job-place">LogMeIn Inc.</span>
                     </div>
                     <div class="job-description">
-                        I was a member of a Scrum team at the R&D department of LogMeIn. I participated in many projects.
-                        The most notable ones are the followings:
+                        I was a member of a Scrum team at the R&D department of LogMeIn. I mainly contributed to the following projects::
                         <ul>
-                            <li>Creating HTML5 libraries and applications using pure javascript and GWT.</li>
+                            <li>Creating HTML5 libraries and applications using pure javascript and GWT for Join.Me which is leading product of LogMeIn.</li>
                             <li>Creating internal continous deployment tool using C#/.NET</li>
                             <li>Developing cross-browser/cross-platform video conferencing tool using WebRTC in javascript,
                                 Qt/C++, python. During this project we developed IOS and Android applications too.
@@ -307,6 +306,30 @@
                 </div>
             </div>
         </div> <!-- School --->
+        <div class="row">
+            <div class="col-md-4">
+                <div class="story-text-0 schools"> I gave talks</div>
+            </div>
+            <div class="col-md-8 jobs">
+                <div class="job">
+                    <div class="job-header">
+                        <div>SzegedTech Meetup, 2012</div>
+                        <div><span class="job-title"><a href="http://www.slideshare.net/PterNagy/webapplication-development-with-html5-and-gwt">Web application development with HTML5 and GWT</a></span></div>
+                        <div class="job-description">
+                        </div>
+                    </div>
+                </div>
+                <div class="job">
+                    <div class="job-header">
+                        <div>SzegedTech Meetup, 2013</div>
+                        <div><span class="job-title"><a href="http://www.slideshare.net/PterNagy/html5-video-58025914">HTML5 video</a></span></div>
+                        <div class="job-description">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> <!-- Presentations --->
+
         <div class="row">
             <div class="col-md-4 story-text-0 language">
                 I can speak
