--- a/index.html
+++ b/index.html
@@ -116,9 +116,10 @@
             <div class="col-md-8">
                 <div class="intro">
                     <p>I am an almost 28 years-old software engineer who is passionate about writing code, solving problems
-                        and connecting things. I like trying out new tools and technologies and being up-to-date with the latest trends. I believe
-                        we always have to find the best tools available for our current problems. So I do not stick to
-                        any programming language or technology. All of them can be learnt and has its place.</p>
+                        and connecting things. I like trying out new tools and technologies and being up-to-date with the latest trends.</p>
+                    <p>
+                        I am a quick learner who likes discovering new territories, using completely unknown tools and expanding his knowledge day by day. So I am very open-minded, I do not stick to
+                        any programming language, technology or framework. All of them can be learnt and has its place.</p>
 
                     <p>My favorite playground is frontend developing however I am not afraid of doing backend at all. I like seeing the results of my work
                         immediately and working with quick iterations. I enjoy discovering the newest packages, the
