improve print support

--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
             </div>
             <div class="col-md-8">
                 <div class="contacts">
+                    <div class="contact-item weburl">
+                        <span class="fa fa-globe"></span><a class="" target="_blank" href="http://pnagy.github.io">Up-to-date online version of this CV</a>
+                    </div>
                     <div class="contact-item">
                         <span class="fa fa-envelope"></span><a class="" target="_blank" href="mailto:peternagyxx@gmail.com">peternagyxx@gmail.com</a>
                     </div>
@@ -237,7 +240,7 @@
                 </div>
             </div>
         </div> <!-- Level1 --->
-        <div class="row">
+        <div class="row jobs-row">
             <div class="col-md-4">
                 <div class="story-text-0 worked-at"> I worked at</div>
             </div>
