--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
             <div class="col-md-8">
                 <div class="skills skills-level-3">
                     <div class="skill-list">
+                        <span>Javascript</span>
                         <span>AngularJS</span>
                         <span>CoffeeScript</span>
                         <span>Node.js</span>
