update skill order

--- a/index.html
+++ b/index.html
@@ -182,22 +182,21 @@
                     <div class="skill-list">
                         <span>Javascript</span>
                         <span>AngularJS</span>
-                        <span>CoffeeScript</span>
+                        <span>ReactJS</span>
                         <span>Node.js</span>
+                        <span>Github</span>
                         <span>Docker</span>
+                        <span>JQuery</span>
                         <span>Gulp</span>
+                        <span>Bootstrap</span>
                         <span>Scrum</span>
                         <span>mocha</span>
-                        <span>JQuery</span>
-                        <span>Sinon.JS</span>
                         <span>HTML5</span>
-                        <span>Git</span>
-                        <span>Github</span>
-                        <span>Bootstrap</span>
                         <span>Travis</span>
                         <span>Codeship</span>
                         <span>Jenkins</span>
                         <span>Jade</span>
+                        <span>CoffeeScript</span>
                         <span>Stylus</span>
                     </div>
                 </div>
@@ -218,6 +217,7 @@
                         <span>Visual Studio</span>
                         <span>JIRA</span>
                         <span>Jenkins</span>
+                        <span>Perforce</span>
                     </div>
                 </div>
             </div>
@@ -237,6 +237,7 @@
                         <span>Java</span>
                         <span>Android SDK</span>
                         <span>GWT</span>
+                        <span>SVN</span>
                     </div>
                 </div>
             </div>
