--- a/index.html
+++ b/index.html
@@ -115,7 +115,10 @@
             </div>
             <div class="col-md-8">
                 <div class="intro">
-                    <p>I am an almost 28 years-old software engineer who is passionate about writing code, solving problems
+                    <p>I am an almost 28 years-old software engineer who is looking for a frontend engineer or a full-stack software engineer position in Barcelona as soon as possible.
+                        I would like to work on my main area of expertise which is AngularJS, ReactJS and Node.js or dig deeper and get more practical experience in Python or Golang.</p>
+
+                    <p>I am passionate about writing code, solving problems
                         and connecting things. I like trying out new tools and technologies and being up-to-date with the latest trends.</p>
                     <p>
                         I am a quick learner who likes discovering new territories, using completely unknown tools and expanding his knowledge day by day. So I am very open-minded, I do not stick to
